<resources>
    <string name="app_name">Norvialle</string>
    <string name="description">Комментарий</string>
    <string name="location">Локация</string>
    <string name="studio">Заказ Студии</string>
    <string name="dress">Заказ платья</string>
    <string name="makeup">Заказ макияжа</string>

    <string name="studioName">Название студии</string>
    <string name="studioPhone">Телефон студии</string>
    <string name="phone">Телефон</string>
    <string name="roomName">Название зала</string>
    <string name="address">Адресс</string>
    <string name="name">Имя контакта</string>
    <string name="name_makeup_artist">Имя</string>
    <string name="norvialle">Norvialle</string>
    <string name="studios">Студии</string>
    <string name="makeupArtists">Визажисты</string>


    <string name="add_studio">Добавление студии</string>
    <string name="adding_event">Добавление события</string>
    <string name="adding_makeup_artist">Добавление визажиста</string>
    <string name="adding_assistant">Добавление ассистента</string>
    <string name="adding_dress">Добавление платья</string>
    <string name="adding_contact">Добавление Контакта</string>


    <string name="delete_dialog_title">Удаление</string>
    <string name="delete_dialog_message">Вы действительно хотите удалить %1$s, это действие не может быть отменено</string>
    <string name="delete_dialog_yes">Да</string>
    <string name="delete_dialog_no">Нет</string>
    <string name="delete_dialog_event">событие</string>
    <string name="delete_dialog_dress">платье</string>
    <string name="delete_dialog_contact">контакт</string>

    <string name="add">Добавить</string>
    <string name="pick">Выбрать</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="ok">ok</string>
    <string name="save">Сохранить</string>
    <string name="roomPrice">Цена зала</string>
    <string name="roomPriceWithDiscount">Цена со скидкой</string>
    <string name="totalPrice">Общая цена</string>
    <string name="paid">Сумма залога</string>
    <string name="makeupPrice">Стоимость</string>
    <string name="dressPrice">Стоимость платья</string>

    <string name="monyLeft">Остаток: %1$d</string>
    <string name="events_list">События</string>
    <string name="calendar">Календарь</string>
    <string name="add_event">Добавить событие</string>
    <string name="contacts">Контакты</string>
    <string name="dresses">Платья</string>
    <string name="makeup_artist_price">Цена %1$d</string>
    <string name="one_hour_before">За час</string>
    <string name="makeup_label">Макияж: \n %1$s \n%2$s</string>
    <string name="assistant_label">Ассистент:\n%1$s</string>
    <string name="view">Посмтореть</string>
    <string name="take_photo">Сфотографировать</string>
    <string name="from_gallery">Из галереи</string>
    <string name="cancel">Отмена</string>
    <string name="shoot_in_time">Съёмка в %1$s</string>
    <string name="schedule_for_today">Расписание на сегодня</string>
    <string name="schedule_for_tomorrow">Расписание на завтра</string>
    <string name="planned_x_events_open_to_view">Запланированно %1$s, откройте для просмотра</string>
    <string name="open_to_view">Откройте для просмотра</string>
    <string name="shoot_location">Локация: %1$s </string>
    <string name="shoot_address"> Адресс: %1$s </string>
    <string name="shoot_client"> Клиент: %1$s </string>
    <string name="shoot_dress"> Платья: %1$d </string>
    <string name="notifications_label">Напоминания о съемках</string>
    <string name="price_settings">Ввод цен</string>
    <string name="login_settings">Параметры входа</string>
    <string name="auto_login_label">Входить автоматически</string>
    <string name="fingerprint_label">Вход по отпечатку пальца</string>
    <string name="input_types_label">Ввод цен</string>
    <string name="day_before">За день, в: </string>
    <string name="default_day_before_time">22:00</string>
    <string name="default_this_day_time">08:00</string>
    <string name="default_time_before_shoot">02:00</string>
    <string name="this_day">В тот же день, в: </string>
    <string name="time_before_shoot">Перед съемкой, за: </string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="insta">Инстаграм</string>
    <string name="dialog_add_contact_save">Хотите сохранить контакт в список?</string>
    <string name="delete_dialog_makeup_artist">визажиста</string>
    <string name="delete_dialog_assistent">ассистент</string>
    <string name="delete_dialog_studio">студию</string>
    <string name="wheels">Барабанный</string>
    <string name="keyboards">Клавиатурный</string>
    <string name="discount">Скидка</string>
    <string name="price">Цена</string>
    <string name="comment">Комментарий</string>
    <string name="assistants">Ассистенты</string>
    <string name="assistant">Ассистент</string>
    <string name="login">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Повторить пароль</string>
    <string name="sign_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="photograph">Фотограф</string>
    <string name="makeup_artist">Визажист</string>
    <string name="register">Зарегистрироваться</string>
    <string name="remember">Запомнить</string>
    <string name="fingerprint">Вход с отпечатком</string>
    <string name="restore_password">Восстановление пароля</string>


    <string name="biometric_failed">Отпечаток не распознан</string>
    <string name="biometric_title">Проверка личности</string>
    <string name="biometric_subtitle">Отпечаток пальца</string>
    <string name="biometric_description">Прислоните палец к сенсору, чтобы подтвердить вашу личность и быстро войти в приложение.</string>
    <string name="biometric_negative_button_text">Отменить</string>
    <string name="exit">Выход</string>
    <string name="restore_password_message">Введите Электронную почту, указанную при регистрации, и мы отправим на нее пароль.</string>
    <string name="exit_warning">Вы действительно хотите выйти?</string>
    <string name="insta_hint">Вставьте ссылку на профиль</string>
    <string name="no_rooms_errors">Добавьте хотя бы один зал</string>
    <string name="input_error">Необходимо ввести: %1$s</string>

    <plurals name="plurals_shoot">
        <item quantity="zero">нет съемок</item>
        <item quantity="one">%1$d съемка</item>
        <item quantity="two">%1$d съемки</item>
        <item quantity="few">%1$d съемки</item>
        <item quantity="many">%1$d съемок</item>
        <item quantity="other">%1$d съемок</item>
    </plurals>
</resources>
