<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_standard"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications_label"
                    android:textSize="@dimen/text_normal" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal">

                <CheckBox
                        android:id="@+id/dayBefore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day_before"
                        android:textSize="@dimen/text_big_ish" />

                <TextView
                        android:id="@+id/defaultDayBeforeTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:text="@string/default_day_before_time"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/text_big_ish" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal">

                <CheckBox
                        android:id="@+id/thisDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/this_day"
                        android:textSize="@dimen/text_big_ish" />

                <TextView
                        android:id="@+id/defaultThisDayTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:text="@string/default_this_day_time"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/text_big_ish" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal">

                <CheckBox
                        android:id="@+id/timeBeforeShoot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_before_shoot"
                        android:textSize="@dimen/text_big_ish" />

                <TextView
                        android:id="@+id/defaultTimeBeforeShoot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:text="@string/default_time_before_shoot"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/text_big_ish" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
