<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_standard"
            android:paddingRight="@dimen/margin_standard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0">
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/contactsList"
                android:layout_marginRight="@dimen/margin_standard"
                android:maxLines="1"
                android:ellipsize="end"
                android:hint="@string/name_makeup_artist" />
    <ImageView
            android:id="@+id/contactsList"
            android:layout_width="@dimen/icon_size_medium"
            android:layout_height="@dimen/icon_size_medium"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/name"
            android:layout_alignTop="@id/name"
            android:src="@drawable/contacts"
            />
</RelativeLayout>

        <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLines="1"
                android:ellipsize="end"
                />

        <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:inputType="none"
                android:focusable="false"
                android:hint="@string/makeupPrice"
                />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>